# cogrion-bootstrap

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  install.sh  pyproject.toml
cogrion_bootstrap/: addons.py  cli.py  constants.py  helm.py  register.py
cogrion_bootstrap/providers/: aws.py  base.py
docs/: aws-infrastructure-requirements.md
docs/aws/: restricted-customer-infrastructure-checklist.md
examples/aws-eks-byo/: .terraform-docs.yml  .terraform.lock.hcl  eks-cluster.tf  locals.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
examples/terraform/aws-eks-byo/: .terraform-docs.yml  .terraform.lock.hcl  README.md  backend.hcl.example  bootstrap.sh  bootstrap.tf  bootstrap_policy.json  cluster_agent.tf  cluster_agent_policy.json  eks-cluster.tf  eks-nodegroups.tf  helm-addons.tf  kubeblocks-irsa.tf  kubeblocks_policy.json  locals.tf  openbao.tf  openbao_policy.json  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
iam/aws/: alb-controller.json  bootstrap.json  cluster-agent.json  cluster-autoscaler.json  external-secrets.json  kubeblocks.json
tests/: test_addons.py  test_aws_provider.py  test_cli.py  test_helm.py  test_register.py
