[project]
name = "cogrion-bootstrap"
version = "0.1.0"
description = "Bootstrap a tenant cluster for the Cogrion platform"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.39",
    "kubernetes>=36.0.2",
]

[project.scripts]
cogrion-bootstrap = "cogrion_bootstrap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogrion_bootstrap"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
